[package]
name = "marketplace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "*"
near-contract-standards = "*"
serde = "*"

[build-dependencies]
near-sandbox-utils = "0.6.0"

[dev-dependencies]
tokio = { version = "1.10.0", features = ["full"] }
anyhow = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
